# threads

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_slack.py
.github/workflows/: daily_schedule.yml
src/: broadcaster_mapping.py  config.py  formatter.py  injuries.py  mapping.py  nba_api.py  rankings.py  slack_client.py
threads_v2/: __init__.py  __main__.py  run.py
threads_v2/config/: __init__.py  emojis.json  emojis.py  labels.py
threads_v2/format/: __init__.py  blocks.py  parent.py  thread.py
threads_v2/nba/: __init__.py  client.py  models.py
threads_v2/slack/: __init__.py  client.py
threads_v2/streaks/: __init__.py  provider.py
threads_v2/util/: __init__.py  logging.py
